@@ -5,7 +5,9 @@ xboxdrv 0.4.3 - (??/Jan/2009)
 * added --ui-clear and void mappings to unmap buttons and axis
 * fixed LED handling for wireless gamepads
 * Thrustmaster Firestorm Dual Power support
-
+* added --name option to set device name
+* added JS_${NUM} name to address joystick buttons by number instead
+  of name
 
 xboxdrv 0.4.2 - (11/Jan/2009)
 =============================
